# rss_news_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt  startup.sh
bot/: config_reader.py  main.py
bot/db/: crud.py  database.py  models.py
bot/handlers/: common.py  sender.py  settings.py
bot/keyboards/: admin.py
bot/middleware/: throttling.py
bot/migrations/: env.py
bot/migrations/versions/: 628a782e5218_.py
bot/states/: settings_states.py
bot/utils/: chat_gpt.py  rss_client.py
