[tool.poetry]
name = "rss-bot"
version = "0.1.0"
description = "Telegram RSS Bot"
authors = ["Your Name <your@email.com>"]
package-mode = false  

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "24.1.0"
aiogram = "3.21.0"
aiohttp = "3.12.14"
asyncpg = "0.30.0"
feedparser = "6.0.11"
beautifulsoup4 = "4.13.4"
APScheduler = "3.11.0"
alembic = "1.16.4"
python-dotenv = "1.1.1"
pydantic-settings = "2.10.1"
azure-ai-inference = {version = "1.0.0b9", extras = ["chat"]}
httpx = "0.28.1"  
sqlalchemy = "2.0.41"  

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "bot.main:main"